[package]
name = "yts"
version = "0.1.0"
edition = "2018"

[dependencies]
select = "0.6.0-alpha.1"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "2", features = ["suggestions", "color", "wrap_help"] }
strum = { version = "0.20", features = ["derive", "strum_macros"] }
reqwest = { version = "0.11.3", features = [ "json", "blocking" ] }
tokio = { version = "1.6.1", features = [ "full" ] }
cached-path = "0.5.1"
colored = "2"
