[package]
name = "yts"
version = "0.1.0"
edition = "2018"
authors = [ "Florin <florinutz@gmail.com>" ]
readme = "README.md"
description = "lib and cli tool for crawling movies out of yts.mx"
license = "MIT"
categories = [ "api-bindings", "command-line-utilities", "command-line-interface" ]
keywords = [ "cli", "api", "http", "terminal", "torrents" ]
repository = "https://github.com/florinutz/yts"

[dependencies]
select = "0.6.0-alpha.1"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
url = { version = "2", features = ["serde"] }
chrono = { version = "^0.4", features = ["serde"] }
clap = { version = "2", features = ["suggestions", "color", "wrap_help"] }
strum = { version = "^0.20", features = ["derive", "strum_macros"] }
reqwest = { version = "^0.11", features = [ "json", "blocking" ] }
cached-path = "^0.5"
colored = "2"
prettytable-rs = "^0.8"
textwrap = { version = "^0.13", features = [ "hyphenation" ] }
hyphenation = "0.8.0"
log = "0.4"
env_logger = "0.8"
